// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NftGridEmpty renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "gap": 12,
        "justifyContent": "center",
        "maxWidth": 256,
      },
      {
        "marginLeft": "auto",
        "marginRight": "auto",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1}
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#686e7d",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    There's a world of NFTs out there. Start your collection today.
  </Text>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Import NFTs"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 1,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "auto",
          },
        ]
      }
      testID="import-collectible-button"
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="spinner-container"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
              },
              undefined,
            ]
          }
          testID="spinner"
        >
          <View
            style={
              [
                {
                  "transform": [
                    {
                      "rotate": "0deg",
                    },
                  ],
                },
              ]
            }
            testID="spinner-animated-view"
          >
            <SvgMock
              fill="currentColor"
              name="Loading"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                ]
              }
              testID="spinner-icon"
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 8,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="content-container"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#121314",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Import NFTs
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`NftGridEmpty renders with disabled add NFT button when isAddNFTEnabled is false 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "display": "flex",
        "flexDirection": "column",
        "gap": 12,
        "justifyContent": "center",
        "maxWidth": 256,
      },
      {
        "marginLeft": "auto",
        "marginRight": "auto",
      },
    ]
  }
>
  <Image
    resizeMode="contain"
    source={1}
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#686e7d",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    There's a world of NFTs out there. Start your collection today.
  </Text>
  <View
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      accessibilityLabel="Import NFTs"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 80,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingLeft": 16,
            "paddingRight": 16,
            "width": "auto",
          },
        ]
      }
      testID="import-collectible-button"
    >
      <View
        style={
          {
            "alignItems": "center",
            "bottom": 0,
            "display": "flex",
            "justifyContent": "center",
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="spinner-container"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
              },
              undefined,
            ]
          }
          testID="spinner"
        >
          <View
            style={
              [
                {
                  "transform": [
                    {
                      "rotate": "0deg",
                    },
                  ],
                },
              ]
            }
            testID="spinner-animated-view"
          >
            <SvgMock
              fill="currentColor"
              name="Loading"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                ]
              }
              testID="spinner-icon"
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 8,
            "flexDirection": "row",
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="content-container"
      >
        <Text
          accessibilityRole="text"
          ellipsizeMode="clip"
          numberOfLines={1}
          style={
            [
              {
                "color": "#121314",
                "flexGrow": 0,
                "flexShrink": 1,
                "flexWrap": "wrap",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
                "textAlign": "center",
              },
              undefined,
            ]
          }
        >
          Import NFTs
        </Text>
      </View>
    </View>
  </View>
</View>
`;
